<resources>
    <string name="app_name">PetPatrolApp</string>
    <string name="text_forgot_1">We will send you your last password used. Please enter your email address below and click send email to send your password to your email address</string>
    <string name="email_address">Email Address</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="pet_patrol">PET PATROL</string>
    <string name="not_a_member">Not a memberzoz ?</string>
    <string name="text_forgot_2">Your old password has been sent to your email. Please don't reply our automated email </string>
    <string name="back_to_login">back to login</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">502643356797262</string>
    <string name="fb_login_protocol_scheme">fb502643356797262</string>
    <string name="nama_pet_care">Nama Pet Care</string>
    <string name="no_telepon">No Telepon</string>
    <string name="nama_rekening">Nama Rekening</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="foto_pet_care">Foto Pet Care</string>
    <string name="submit">Submit</string>
    <string name="usr_username">Username</string>
    <string name="usr_email">Email</string>
    <string name="usr_password">Password</string>
    <string name="usr_retype_password">Retype Password</string>
    <string name="usr_submit">Submit</string>
    <string name="Login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="back">BACK</string>
    <string name="newuser">newuser</string>


</resources>
