<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7A5A"
    tools:context="com.petpatrol.petpatrolapp.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewForgot"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="101dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewNotMember"
        android:layout_alignStart="@+id/textViewNotMember"
        android:layout_marginBottom="39dp"
        android:background="@color/buttonColor"
        android:text="@string/send_email"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/textViewNotMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/not_a_member" />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:gravity="center_horizontal"
        android:text="@string/pet_patrol"
        android:textColor="#FFFFFF"
        android:textSize="12pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewForgot"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/forgot_password"
        android:textSize="8pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewForgot"
        android:layout_alignBottom="@+id/textViewForgot"
        android:layout_alignParentEnd="true"
        android:text="@string/text_forgot_1"
        android:gravity="center_horizontal"
        android:textSize="8pt" />
    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginBottom="136dp"
        android:layout_marginStart="19dp"
        android:gravity="center_horizontal"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF" />


</RelativeLayout>
