<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petpatrol.petpatrolapp.Register.PetCareRegisterActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/formregistrasi"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="240dp" />

            <EditText
                android:id="@+id/usr_usrname"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/usr_username"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="244dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/usr_usremail"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/usr_email"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="290dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/usr_sandi"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/usr_password"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="336dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/usr_usrre_password"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/usr_retype_password"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="382dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#ffb85f"
                android:onClick="saveDataUser"
                android:text="@string/usr_submit"
                android:textColor="#ffffff"
                tools:layout_editor_absoluteX="129dp"
                tools:layout_editor_absoluteY="446dp" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>
