<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petpatrol.petpatrolapp.Register.PetCareRegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/formregistrasi"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="240dp" />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/nama_pet_care"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="244dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/no_telepon"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="290dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/nama_rekening"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="336dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_gravity="center"
                android:hint="@string/nomor_rekening"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="382dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_gravity="center"
                    android:hint="@string/foto_pet_care"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="72dp"
                    tools:layout_editor_absoluteY="382dp" />

                <Space
                    android:layout_width="22dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Browse"
                    android:textColor="#ffffff"
                    android:background="#ffb85f"
                    tools:layout_editor_absoluteX="129dp"
                    tools:layout_editor_absoluteY="446dp" />

            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:background="#ffb85f"
                tools:layout_editor_absoluteX="129dp"
                tools:layout_editor_absoluteY="446dp" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
