<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7A5A"
    tools:context="com.petpatrol.petpatrolapp.ForgotPassword2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="391dp"
        android:layout_height="156dp"
        android:layout_above="@+id/textViewForgot"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewNotMember"
        android:layout_alignStart="@+id/textViewNotMember"
        android:background="@color/buttonColor"
        android:text="@string/send_email"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="403dp" />


    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewForgot"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/pet_patrol"
        android:textColor="#FFFFFF"
        android:textSize="12pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewForgot"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textSize="8pt"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="242dp" />




</android.support.constraint.ConstraintLayout>
